# mentor-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_brief.sh
.github/workflows/: ci.yml
src/mentor_agent/: __init__.py  agent.py  cli.py  memory.py
tests/: test_memory.py
