[project]
name = "mentor-agent"
version = "0.1.0"
description = "A personal AI mentor agent for daily prioritization and accountability, built on the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mentor = "mentor_agent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
